Fixed text align for desktop version

--- a/sass/_partials/_section-four.scss
+++ b/sass/_partials/_section-four.scss
@@ -12,6 +12,9 @@
 
 .summary-copyright {
   text-align: center;
+  @media (min-width: 1000px) {
+    text-align: left;
+  }
   &__title {
     color: $title-text-color;
   }
